# PrEWUtils

./: .gitignore  CMakeLists.txt  Readme.md
macros/: compile.sh  load_env.sh
source/: CMakeLists.txt
source/include/DataHelp/: BinSelector.h  CoefDistrHelp.h  DistrHelp.h  DistrHelp.tpp  FitParHelp.h  PredDistrHelp.h  PredLinkHelp.h
source/include/Names/: CoefNaming.h  FctNaming.h  MinimizerInfo.h  MinimizerNaming.h  ParNaming.h
source/include/Parallel/: ThreadPool.h
source/include/Runners/: ParallelRunner.h  ParallelRunner.tpp
source/include/SetupHelp/: AccBoxInfo.h  AccBoxPolynomialInfo.h  AfInfo.h  ChiAsymmInfo.h  ConstEffInfo.h  CrossSectionInfo.h  DifermionParamInfo.h  InputHelp.h  ParOrder.h  RunInfo.h  SetupInfos.h  TGCInfo.h
source/include/Setups/: FitModifier.h  GeneralSetup.h  RKDistrSetup.h
source/src/DataHelp/: BinSelector.cpp  CoefDistrHelp.cpp  DistrHelp.cpp  FitParHelp.cpp  PredDistrHelp.cpp  PredLinkHelp.cpp
source/src/Names/: CoefNaming.cpp  FctNaming.cpp  MinimizerNaming.cpp  ParNaming.cpp
source/src/Runners/: ParallelRunner_impl.cpp
source/src/SetupHelp/: AccBoxInfo.cpp  AccBoxPolynomialInfo.cpp  AfInfo.cpp  ChiAsymmInfo.cpp  ConstEffInfo.cpp  CrossSectionInfo.cpp  DifermionParamInfo.cpp  InputHelp.cpp  ParOrder.cpp  RunInfo.cpp  TGCInfo.cpp
source/src/Setups/: FitModifier.cpp  GeneralSetup.cpp  RKDistrSetup.cpp
